name:                pixel-pen
version:             0.1.0.0
synopsis:            sdl2 middleware
description:         Please see README.md
homepage:            https://github.com/githubuser/pixel-pen#readme
license:             BSD3
license-file:        LICENSE
author:              Chia-Chi Tsai
maintainer:          rueshyna@gmail.com
copyright:           2016 Chia-Chi
category:            Grphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PixelPen
                     , PixelPen.Container
                     , PixelPen.Handler
  build-depends:       base >= 4.7 && < 5
                     , text
                     , sdl2
                     , transformers
  default-language:    Haskell2010

test-suite pixel-pen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pixel-pen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rueshyna/pixel-pen
